<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShadowBackground"
    tools:context=".MovieDetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailsActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layerType="software"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers_poster" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_poster_content_description"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            app:srcCompat="@drawable/shadow_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:drawablePadding="8dp"
            android:text="@string/back_button"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/pg"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_title"
            app:layout_constraintStart_toStartOf="@id/movie_title" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_title"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textColor="@color/colorInk"
            android:textSize="14sp"
            android:layout_marginVertical="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/colorTextGray"
            android:textSize="14sp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="9dp"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star1"
            android:contentDescription="@string/star_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintEnd_toStartOf="@id/star5"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintEnd_toStartOf="@id/reviews"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star_inactive"
            />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storyline_title"
            android:textColor="@color/colorStorylineTitle"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/storyline_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/storyline_description"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_title"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_description" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/actor1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/actor1_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/actor2"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:srcCompat="@drawable/dawney_jr"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/actor2"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/actor2_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toEndOf="@id/actor1"
            app:layout_constraintEnd_toStartOf="@id/actor3"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:srcCompat="@drawable/evans"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/actor3"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/actor3_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/actor2"
            app:layout_constraintEnd_toStartOf="@id/actor4"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:srcCompat="@drawable/ruffalo"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/actor4"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:contentDescription="@string/actor4_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1"
            android:scaleType="centerCrop"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/actor3"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:srcCompat="@drawable/hemsword"/>

        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor1_name"
            android:textColor="@color/colorActorName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/actor1"
            app:layout_constraintEnd_toEndOf="@id/actor1"
            app:layout_constraintTop_toBottomOf="@id/actor1" />

        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor2_name"
            android:textColor="@color/colorActorName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/actor2"
            app:layout_constraintEnd_toEndOf="@id/actor2"
            app:layout_constraintTop_toBottomOf="@id/actor2" />

        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor3_name"
            android:textColor="@color/colorActorName"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/actor3"
            app:layout_constraintEnd_toEndOf="@id/actor3"
            app:layout_constraintTop_toBottomOf="@id/actor3" />

        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor4_name"
            android:textColor="@color/colorActorName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/actor4"
            app:layout_constraintEnd_toEndOf="@id/actor4"
            app:layout_constraintTop_toBottomOf="@id/actor4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_side_margin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>