<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShadowBackground"
    tools:context=".FragmentMoviesList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:contentDescription="@string/movie_poster_content_description"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layerType="software"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avengers_poster" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            app:srcCompat="@drawable/foreground_shadow_movie_item"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/movie_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:drawablePadding="8dp"
            android:text="@string/back_button"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            tools:text="@string/pg"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_title"
            app:layout_constraintStart_toStartOf="@id/movie_title" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_title"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tags"
            android:textColor="@color/colorInk"
            android:textSize="14sp"
            android:layout_marginVertical="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/reviews"
            android:textColor="@color/colorTextGray"
            android:textSize="14sp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="9dp"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star1"
            android:contentDescription="@string/star_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintEnd_toStartOf="@id/star5"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintEnd_toStartOf="@id/reviews"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:srcCompat="@drawable/rating_star_inactive"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storyline_title"
            android:textColor="@color/colorStorylineTitle"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/storyline_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/storyline_description"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_title"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_side_margin" />

        <View
            android:id="@+id/loading_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorShadowBackground"
            android:visibility="visible"
            tools:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loading_circle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/colorInk"
            android:visibility="visible" />

        <TextView
            android:id="@+id/error_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/error_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:text="@string/try_again"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>